# tlbus

./: .dockerignore  .gitignore  .gitlab-ci.yml  Cargo.toml  Dockerfile  Dockerfile-client  Dockerfile-py  Dockerfile-tlbusnet-obs  Dockerfile-worker  Dockerfile.ghcr  LICENSE  README.md  READMEAI.md  READMEIT.md
.github/workflows/: ghcr-images.yml  tests.yml
.gitlab/images/: README.md  tlbusnet-runtime-obs.yml
clients/client/: Cargo.toml
clients/client/src/: lib.rs  main.rs
clients/pyclient/: tlbus_pyclient.py
clients/worker/: Cargo.toml
clients/worker/src/: main.rs
crates/bridge/: Cargo.toml
crates/bridge/src/: lib.rs  main.rs
crates/core/: Cargo.toml
crates/core/src/: address.rs  codec.rs  envelope.rs  error.rs  frame.rs  lib.rs  pipeline.rs  plugin.rs  router.rs
crates/daemon/: Cargo.toml
crates/daemon/src/: daemon.rs  daemon_modified.rs  lib.rs  main.rs  observability_tests.rs
crates/plugins/auth/: Cargo.toml
crates/plugins/auth/src/: lib.rs
crates/plugins/hmac/: Cargo.toml
crates/plugins/hmac/src/: lib.rs
crates/plugins/lineage/: Cargo.toml
crates/plugins/lineage/src/: lib.rs
crates/plugins/manifest/: Cargo.toml
crates/plugins/manifest/src/: lib.rs
crates/plugins/observability/: Cargo.toml  README.md
crates/plugins/observability/src/: lib.rs
crates/send/: Cargo.toml
crates/send/src/: lib.rs  main.rs
crates/sidecar/: Cargo.toml
crates/sidecar/src/: lib.rs  main.rs
docs/en/: mkdocs.yml
docs/en/docs/: index.md
docs/en/docs/about/: index.md
docs/en/docs/reference/: index.md
docs/en/docs/resources/: index.md
docs/en/docs/tutorial/: index.md
docs/it/: mkdocs.yml
docs/it/docs/: index.md
docs/it/docs/about/: index.md
docs/it/docs/reference/: index.md
docs/it/docs/resources/: index.md
docs/it/docs/tutorial/: index.md
