[workspace]
members = [
    "crates/core",
    "crates/daemon",
    "crates/sidecar",
    "crates/send",
    "crates/bridge",
    "clients/client",
    "clients/worker",
    "crates/plugins/auth",
    "crates/plugins/hmac",
    "crates/plugins/lineage",
    "crates/plugins/manifest",
    "crates/plugins/observability",
]
resolver = "2"

[workspace.package]
edition = "2024"
license = "MIT"
version = "0.1.0"

[workspace.dependencies]
bytes = "1.11.1"
hex = "0.4.3"
h2 = "0.4.13"
hmac = "0.13.0"
http = "1.4.0"
rmp-serde = "1.3.1"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
serde_bytes = "0.11.19"
sha2 = "0.11.0"
tempfile = "3.27.0"
thiserror = "2.0.18"
tokio = { version = "1.51.1", features = ["fs", "io-util", "macros", "net", "rt-multi-thread", "sync", "time"] }
uuid = { version = "1.23.0", features = ["serde", "v4"] }
