[package]
name = "tlbus-client"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
serde_json.workspace = true
tlbus-core = { path = "../../crates/core" }
uuid.workspace = true

[dev-dependencies]
tempfile.workspace = true
tlbus-daemon = { path = "../../crates/daemon" }
tokio.workspace = true
