[package]
name = "tlbus-daemon"
edition.workspace = true
license.workspace = true
version.workspace = true

[[bin]]
name = "tlbus-daemon"
path = "src/main.rs"

[dependencies]
serde_json.workspace = true
tokio.workspace = true
tlbus-core = { path = "../core" }
tlbus-plugin-auth = { path = "../plugins/auth" }
tlbus-plugin-hmac = { path = "../plugins/hmac" }
tlbus-plugin-lineage = { path = "../plugins/lineage" }
tlbus-plugin-manifest = { path = "../plugins/manifest" }
tlbus-plugin-observability = { path = "../plugins/observability" }

[dev-dependencies]
tempfile.workspace = true
